@@ -53,7 +53,8 @@ CVSACCESS = :ext:sdcc-builder
 SVNSERVER =
 
 # Regression test targets
-REGTESTTARGETS = test-host test-mcs51-small test-mcs51-large test-mcs51-stack-auto test-ds390 test-hc08 test-ucz80
+CROSSREGTESTTARGETS = test-mcs51-small test-mcs51-large test-mcs51-stack-auto test-ds390 test-hc08 test-ucz80
+REGTESTTARGETS = test-host $(CROSSREGTESTTARGETS)
 # Directory for regression test log file
 REGTESTDIR = $(HTDOCSDIR)/regression_test_results/$(TARGET_PLATFORM)
 # Regression test log file
