@@ -1,3 +1,8 @@
+2010-07-06 Borut Razem <borut.razem AT siol.net>
+
+	* components/sdcc.mk:
+	  exclude host target from cross regression testing
+
 2010-07-04 Borut Razem <borut.razem AT siol.net>
 
 	* components/sdcc.mk:
